feat: Implement in-app updates via Google Play
Refactors the update mechanism to use the Google Play In-App Update library, replacing the previous custom implementation that relied on the GitHub API. This provides a more streamlined and integrated update experience for users who install the app from the Play Store.

- Integrate the `com.google.android.play:app-update` library.
- Implement an immediate update flow that prompts the user when a new version is available on Google Play.
- Remove the custom GitHub-based `UpdateChecker`, `UpdateManager`, and `UpdateDialog` components.
- Remove the `REQUEST_INSTALL_PACKAGES` permission as it is no longer required.
- Add new preference XML files (`pref_general.xml`, `pref_values.xml`, `strings.xml`) to the `common` module for a new settings implementation.
- Upgrade various AndroidX, Kotlin, and Gradle dependencies to their latest versions.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
-agp = "8.7.2"
+agp = "8.13.2"
 kotlin = "2.3.0"
-coreKtx = "1.13.1"
+coreKtx = "1.17.0"
 appcompat = "1.7.1"
 constraintlayout = "2.2.1"
 preference = "1.2.1"
 localbroadcastmanager = "1.1.0"
 flatbuffers = "25.2.10"
 usbSerial = "3.7.0"
-leanback = "1.0.0"
+leanback = "1.2.0"
 konfetti = "2.0.5"
 composeBom = "2024.01.00"
-materialIconsExtended = "1.6.0"
-tvFoundation = "1.0.0-alpha10"
-tvMaterial = "1.0.0-alpha10"
-activityCompose = "1.8.2"
+materialIconsExtended = "1.7.8"
+tvFoundation = "1.0.0-alpha12"
+tvMaterial = "1.0.1"
+activityCompose = "1.12.2"
 lifecycleViewModelCompose = "2.7.0"
-navigationCompose = "2.7.7"
+navigationCompose = "2.9.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
