--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -34,6 +34,12 @@ jobs:
       run: |
         echo $ENCODED_STRING | base64 -d > release.keystore
 
+    - name: Decode Google Services JSON
+      env:
+        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+      run: |
+        echo $GOOGLE_SERVICES_JSON | base64 -d > app/google-services.json
+
     - name: Build Release APK and AAB
       env:
         KEYSTORE_PATH: ${{ github.workspace }}/release.keystore
