--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -11,6 +11,9 @@ on:
         description: 'Release Status (completed, draft, halted, inProgress)'
         required: true
         default: 'draft'
+      version_name:
+        description: 'App versionName (например 0.1.0 или 0.1.0-beta.1)'
+        required: true
 
 jobs:
   build_and_release:
@@ -47,6 +50,7 @@ jobs:
         KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
         KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         BUILD_NUMBER: ${{ github.run_number }}
+        APP_VERSION_NAME: ${{ inputs.version_name }}
       run: ./gradlew assembleRelease bundleRelease
 
     - name: Create Release Tag
