refactor(ci): Split build and release jobs in workflow
This commit refactors the `manual_release.yml` GitHub Actions workflow to separate the build and release processes into distinct jobs.

Previously, a single `build_and_release` job handled building, signing, and deploying the application. This has been split into a `build` job and a `release` job.

- The `build` job is now responsible for checking out the code, setting up Java and Gradle, decoding the keystore, and building the release APK and AAB.
- After a successful build, it uploads the `app-release.apk` and `app-release.aab` as build artifacts.
- A new `release` job depends on the successful completion of the `build` job. It downloads the artifacts and then handles creating the GitHub Release and uploading the AAB to the Google Play Store.

This separation improves the structure and clarity of the workflow by isolating build and deployment concerns. It also ensures that the release steps only run after a successful build has been fully completed and its artifacts have been archived. A step to make `gradlew` executable has also been added to ensure proper permissions.

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -16,10 +16,8 @@ on:
         required: true
 
 jobs:
-  build_and_release:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     steps:
     - uses: actions/checkout@v4
@@ -30,6 +28,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: gradle
+
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
 
     - name: Decode Keystore
       env:
@@ -53,6 +54,30 @@ jobs:
         APP_VERSION_NAME: ${{ inputs.version_name }}
       run: ./gradlew assembleRelease bundleRelease
 
+    - name: Upload build artifacts (APK/AAB)
+      uses: actions/upload-artifact@v4
+      with:
+        name: android-release
+        if-no-files-found: error
+        path: |
+          app/build/outputs/apk/release/app-release.apk
+          app/build/outputs/bundle/release/app-release.aab
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: android-release
+        path: dist
+
     - name: Create Release Tag
       id: tag
       run: |
@@ -63,7 +88,7 @@ jobs:
       with:
         tag_name: ${{ steps.tag.outputs.tag_name }}
         name: Release ${{ steps.tag.outputs.tag_name }}
-        files: app/build/outputs/apk/release/app-release.apk
+        files: dist/app-release.apk
         draft: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -73,6 +98,6 @@ jobs:
       with:
         serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
         packageName: com.vasmarfas.UniversalAmbientLight
-        releaseFiles: app/build/outputs/bundle/release/app-release.aab
+        releaseFiles: dist/app-release.aab
         track: ${{ inputs.track }}
         status: ${{ inputs.status }}
