refactor(ci): Split build and release jobs in workflow
This commit refactors the `manual_release.yml` GitHub Actions workflow to separate the build and release processes into distinct jobs.

Previously, a single `build_and_release` job handled building, signing, and deploying the application. This has been split into a `build` job and a `release` job.

- The `build` job is now responsible for checking out the code, setting up Java and Gradle, decoding the keystore, and building the release APK and AAB.
- After a successful build, it uploads the `app-release.apk` and `app-release.aab` as build artifacts.
- A new `release` job depends on the successful completion of the `build` job. It downloads the artifacts and then handles creating the GitHub Release and uploading the AAB to the Google Play Store.

This separation improves the structure and clarity of the workflow by isolating build and deployment concerns. It also ensures that the release steps only run after a successful build has been fully completed and its artifacts have been archived. A step to make `gradlew` executable has also been added to ensure proper permissions.

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -63,7 +63,7 @@ jobs:
           app/build/outputs/apk/release/app-release.apk
           app/build/outputs/bundle/release/app-release.aab
 
-  release:
+  github_release:
     runs-on: ubuntu-latest
     needs: build
     permissions:
@@ -92,6 +92,19 @@ jobs:
         draft: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  google_play:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: android-release
+        path: dist
 
     - name: Upload to Google Play
       uses: r0adkll/upload-google-play@v1
