ci: Improve manual release workflow
This commit introduces several improvements to the `manual_release.yml` GitHub Actions workflow.

The release process is now more robust and flexible. The release tag and name are now derived from a manually provided `version_name` input, replacing the previous timestamp-based naming. This allows for more semantic and predictable versioning.

The workflow now builds and attaches both the APK and the App Bundle (AAB) to the GitHub Release draft, providing more complete release artifacts. The Google Play upload step has also been updated to use the correct path for the AAB.

Additionally, a caching step for the Gradle wrapper has been added to speed up future workflow runs.

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -29,6 +29,13 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Cache Gradle wrapper
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/wrapper
+        key: gradle-wrapper-${{ runner.os }}-8.14.4
+
     - name: Make gradlew executable
       run: chmod +x ./gradlew
 
@@ -81,14 +88,16 @@ jobs:
     - name: Create Release Tag
       id: tag
       run: |
-        echo "tag_name=v$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_OUTPUT
+        echo "tag_name=v${{ github.event.inputs.version_name }}" >> $GITHUB_OUTPUT
 
     - name: Upload APK to GitHub Release
       uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ steps.tag.outputs.tag_name }}
-        name: Release ${{ steps.tag.outputs.tag_name }}
-        files: dist/app-release.apk
+        name: Release ${{ github.event.inputs.version_name }}
+        files: |
+          dist/apk/release/app-release.apk
+          dist/bundle/release/app-release.aab
         draft: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -111,6 +120,6 @@ jobs:
       with:
         serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
         packageName: com.vasmarfas.UniversalAmbientLight
-        releaseFiles: dist/app-release.aab
+        releaseFiles: dist/bundle/release/app-release.aab
         track: ${{ inputs.track }}
         status: ${{ inputs.status }}
