ci: Automate RuStore publishing with new authentication
This commit updates the `manual_release.yml` GitHub Actions workflow to automate publishing to the RuStore. It replaces the previous static `RUSTORE_PUBLIC_TOKEN` with a dynamic token generation process.

The new implementation generates a JSON Web Encryption (JWE) token by signing a timestamp with a private key (`RUSTORE_PRIVATE_KEY`). This aligns with RuStore's updated authentication requirements for their public API.

Key changes:
- Adds a `run-name` to the workflow for better identification in GitHub Actions.
- Introduces a new step to generate a JWE token for RuStore API authentication using `openssl` and `curl`.
- The subsequent steps ("Create draft version" and "Upload APK") are updated to use the newly generated `RUSTORE_JWE` token for authorization instead of the old static secret.

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -151,11 +151,19 @@ jobs:
 
         AUTH_BODY=$(jq -n --arg keyId "$RUSTORE_KEY_ID" --arg ts "$TIMESTAMP" --arg sig "$SIGNATURE_B64" '{keyId:$keyId,timestamp:$ts,signature:$sig}')
 
-        AUTH_RESPONSE=$(curl --fail -s -X POST "https://public-api.rustore.ru/public/auth" \
+        echo "RuStore auth request body: $AUTH_BODY"
+        AUTH_RESPONSE=$(curl -s -X POST "https://public-api.rustore.ru/public/auth" \
           -H "Content-Type: application/json" \
           -d "$AUTH_BODY")
 
         echo "RuStore auth response: $AUTH_RESPONSE"
+
+        AUTH_CODE=$(echo "$AUTH_RESPONSE" | jq -r '.code // empty')
+        if [ "$AUTH_CODE" != "OK" ]; then
+          echo "RuStore auth failed, code=$AUTH_CODE"
+          exit 1
+        fi
+
         RUSTORE_JWE=$(echo "$AUTH_RESPONSE" | jq -r '.body.jwe')
         if [ -z "$RUSTORE_JWE" ] || [ "$RUSTORE_JWE" = "null" ]; then
           echo "Failed to parse jwe from RuStore auth response"
