ci: Automate RuStore publishing with new authentication
This commit updates the `manual_release.yml` GitHub Actions workflow to automate publishing to the RuStore. It replaces the previous static `RUSTORE_PUBLIC_TOKEN` with a dynamic token generation process.

The new implementation generates a JSON Web Encryption (JWE) token by signing a timestamp with a private key (`RUSTORE_PRIVATE_KEY`). This aligns with RuStore's updated authentication requirements for their public API.

Key changes:
- Adds a `run-name` to the workflow for better identification in GitHub Actions.
- Introduces a new step to generate a JWE token for RuStore API authentication using `openssl` and `curl`.
- The subsequent steps ("Create draft version" and "Upload APK") are updated to use the newly generated `RUSTORE_JWE` token for authorization instead of the old static secret.

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -177,7 +177,7 @@ jobs:
         PACKAGE_NAME: com.vasmarfas.UniversalAmbientLight
         APP_VERSION_NAME: ${{ github.event.inputs.version_name }}
       run: |
-        RESPONSE=$(curl --fail -s -X POST "https://public-api.rustore.ru/public/v1/application/${PACKAGE_NAME}/version" \
+        RESPONSE=$(curl -s -X POST "https://public-api.rustore.ru/public/v1/application/${PACKAGE_NAME}/version" \
           -H "Content-Type: application/json" \
           -H "Public-Token: ${RUSTORE_JWE}" \
           -d @- <<EOF
@@ -187,6 +187,11 @@ jobs:
         EOF
         )
         echo "RuStore draft response: $RESPONSE"
+        DRAFT_CODE=$(echo "$RESPONSE" | jq -r '.code // empty')
+        if [ "$DRAFT_CODE" != "OK" ]; then
+          echo "RuStore draft failed, code=$DRAFT_CODE"
+          exit 1
+        fi
         VERSION_ID=$(echo "$RESPONSE" | jq -r '.body')
         if [ -z "$VERSION_ID" ] || [ "$VERSION_ID" = "null" ]; then
           echo "Failed to parse versionId from RuStore response"
