ci: Automate RuStore publishing with new authentication
This commit updates the `manual_release.yml` GitHub Actions workflow to automate publishing to the RuStore. It replaces the previous static `RUSTORE_PUBLIC_TOKEN` with a dynamic token generation process.

The new implementation generates a JSON Web Encryption (JWE) token by signing a timestamp with a private key (`RUSTORE_PRIVATE_KEY`). This aligns with RuStore's updated authentication requirements for their public API.

Key changes:
- Adds a `run-name` to the workflow for better identification in GitHub Actions.
- Introduces a new step to generate a JWE token for RuStore API authentication using `openssl` and `curl`.
- The subsequent steps ("Create draft version" and "Upload APK") are updated to use the newly generated `RUSTORE_JWE` token for authorization instead of the old static secret.

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -140,7 +140,9 @@ jobs:
           exit 1
         fi
 
-        TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.%3fZ")
+        # RuStore требует формат вида yyyy-MM-dd'T'HH:mm:ssXXX, пример: 2024-01-01T12:34:56.789+03:00
+        # Используем UTC с миллисекундами и явным смещением +00:00
+        TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.%3N+00:00")
         MESSAGE="${RUSTORE_KEY_ID}${TIMESTAMP}"
 
         echo "$RUSTORE_PRIVATE_KEY" | base64 -d > rustore_key.der
