--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -140,38 +140,115 @@ jobs:
           exit 1
         fi
 
-        # RuStore требует формат вида yyyy-MM-dd'T'HH:mm:ssXXX, пример: 2024-01-01T12:34:56.789+03:00
-        # Используем UTC с миллисекундами и явным смещением +00:00
-        TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.%3N+00:00")
-        MESSAGE="${RUSTORE_KEY_ID}${TIMESTAMP}"
+        python - << 'EOF'
+import os
+import base64
+import datetime
+import json
+import sys
 
-        echo "$RUSTORE_PRIVATE_KEY" | base64 -d > rustore_key.der
-        openssl pkcs8 -inform DER -nocrypt -in rustore_key.der -out rustore_key.pem
+from Crypto.PublicKey import RSA
+from Crypto.Signature import pkcs1_15
+from Crypto.Hash import SHA512
+import requests
 
-        SIGNATURE_BIN=$(printf '%s' "$MESSAGE" | openssl dgst -sha512 -sign rustore_key.pem)
-        SIGNATURE_B64=$(echo "$SIGNATURE_BIN" | base64 -w0)
+key_id = os.getenv("RUSTORE_KEY_ID")
+private_key_b64 = os.getenv("RUSTORE_PRIVATE_KEY")
 
-        AUTH_BODY=$(jq -n --arg keyId "$RUSTORE_KEY_ID" --arg ts "$TIMESTAMP" --arg sig "$SIGNATURE_B64" '{keyId:$keyId,timestamp:$ts,signature:$sig}')
+if not key_id or not private_key_b64:
+    print("RuStore key id or private key is not set in env", file=sys.stderr)
+    sys.exit(1)
 
-        echo "RuStore auth request body: $AUTH_BODY"
-        AUTH_RESPONSE=$(curl -s -X POST "https://public-api.rustore.ru/public/auth" \
-          -H "Content-Type: application/json" \
-          -d "$AUTH_BODY")
+private_key = RSA.import_key(base64.b64decode(private_key_b64))
 
-        echo "RuStore auth response: $AUTH_RESPONSE"
+timestamp = datetime.datetime.now(datetime.timezone.utc).isoformat(timespec='milliseconds')
+message_to_sign = key_id + timestamp
 
-        AUTH_CODE=$(echo "$AUTH_RESPONSE" | jq -r '.code // empty')
-        if [ "$AUTH_CODE" != "OK" ]; then
-          echo "RuStore auth failed, code=$AUTH_CODE"
+hash_obj = SHA512.new(message_to_sign.encode())
+signer = pkcs1_15.new(private_key)
+signature_bytes = signer.sign(hash_obj)
+signature_value = base64.b64encode(signature_bytes).decode()
+
+auth_body = {
+    "keyId": key_id,
+    "timestamp": timestamp,
+    "signature": signature_value,
+}
+
+print("RuStore auth request body:", json.dumps(auth_body, ensure_ascii=False), file=sys.stderr)
+
+resp = requests.post(
+    "https://public-api.rustore.ru/public/auth",
+    headers={"Content-Type": "application/json"},
+    data=json.dumps(auth_body),
+    timeout=10,
+)
+
+print("RuStore auth raw response:", resp.text, file=sys.stderr)
+
+try:
+    data = resp.json()
+except Exception as e:
+    print("Failed to parse auth response as JSON:", e, file=sys.stderr)
+    sys.exit(1)
+
+if data.get("code") != "OK":
+    print(f"RuStore auth failed, code={data.get('code')}, message={data.get('message')}", file=sys.stderr)
+    sys.exit(1)
+
+jwe = data.get("body", {}).get("jwe")
+if not jwe:
+    print("No jwe in auth response body", file=sys.stderr)
+    sys.exit(1)
+
+print(f"RUSTORE_JWE={jwe}")
+EOF
+        # забираем строку вида RUSTORE_JWE=... из вывода python
+        RUSTORE_JWE_LINE=$(python - << 'EOF'
+import os
+import base64
+import datetime
+import json
+import sys
+
+from Crypto.PublicKey import RSA
+from Crypto.Signature import pkcs1_15
+from Crypto.Hash import SHA512
+import requests
+
+key_id = os.getenv("RUSTORE_KEY_ID")
+private_key_b64 = os.getenv("RUSTORE_PRIVATE_KEY")
+
+if not key_id or not private_key_b64:
+    sys.exit(1)
+
+private_key = RSA.import_key(base64.b64decode(private_key_b64))
+timestamp = datetime.datetime.now(datetime.timezone.utc).isoformat(timespec='milliseconds')
+msg = key_id + timestamp
+hash_obj = SHA512.new(msg.encode())
+signer = pkcs1_15.new(private_key)
+signature = base64.b64encode(signer.sign(hash_obj)).decode()
+body = {"keyId": key_id, "timestamp": timestamp, "signature": signature}
+resp = requests.post(
+    "https://public-api.rustore.ru/public/auth",
+    headers={"Content-Type": "application/json"},
+    data=json.dumps(body),
+    timeout=10,
+)
+data = resp.json()
+if data.get("code") != "OK":
+    sys.exit(1)
+jwe = data.get("body", {}).get("jwe")
+if not jwe:
+    sys.exit(1)
+print(f"RUSTORE_JWE={jwe}")
+EOF
+)
+        if [ -z "$RUSTORE_JWE_LINE" ]; then
+          echo "Failed to obtain RuStore JWE via python helper"
           exit 1
         fi
-
-        RUSTORE_JWE=$(echo "$AUTH_RESPONSE" | jq -r '.body.jwe')
-        if [ -z "$RUSTORE_JWE" ] || [ "$RUSTORE_JWE" = "null" ]; then
-          echo "Failed to parse jwe from RuStore auth response"
-          exit 1
-        fi
-        echo "RUSTORE_JWE=$RUSTORE_JWE" >> $GITHUB_ENV
+        echo "$RUSTORE_JWE_LINE" >> $GITHUB_ENV
 
     - name: Create draft version in RuStore
       env:
