refactor: Enhance analytics and improve WLED stability
This commit significantly expands analytics tracking to gather detailed usage insights and introduces major stability improvements for the WLED client, particularly when the device screen is off.

### Analytics Enhancements
-   **Expanded Event Tracking:** A wide range of new analytics events have been added to track user interactions and app health. This includes:
    -   Screen views for `Home`, `Settings`, and `LED Layout` screens.
    -   Interactions with `Help` and `Support` dialogs and links.
    -   Permission requests and results (USB, Battery Optimization).
    -   App update flow (requested, completed, cancelled).
    -   Service errors (e.g., empty host, invalid LED counts, permission issues).
    -   Changes to almost all settings, such as protocol, host/port, framerate, quality, smoothing, and language.
    -   Screen capture session duration is now logged.
-   **User Properties:** The app now sets Firebase user properties on launch, including app version, Android version, connection protocol, language, and key settings like auto-reconnect and smoothing. These properties are updated dynamically when the user changes the corresponding setting.
-   **Privacy Policy:** The privacy policy has been updated to disclose the use of Firebase Analytics and Crashlytics, clarifying what anonymous data is collected and why.

### WLED Stability Improvements
This addresses an issue where the WLED connection would break when the TV/device screen turns off, causing the controller to revert to its default effect.
-   **Intelligent Reconnection:** The `WLEDClient` is now more resilient to network interruptions that occur when a device enters sleep mode (often causing `EPERM` errors).
-   **Error Handling:** When a network error (`EPERM`) is detected, the client temporarily pauses sending data to avoid log spam and high CPU usage.
-   **Fast Recovery:** A new `resetBlocked()` method is introduced. It is called when th

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -274,20 +274,30 @@ jobs:
           
           echo "RuStore upload response (HTTP $HTTP_CODE): $BODY"
           
-          if [ "$HTTP_CODE" != "200" ] && [ "$HTTP_CODE" != "201" ]; then
+          # Проверяем, не является ли ошибка "APK already uploaded"
+          MESSAGE=$(echo "$BODY" | jq -r '.message // ""')
+          CODE=$(echo "$BODY" | jq -r '.code // empty')
+          
+          if [ "$HTTP_CODE" = "400" ] && echo "$MESSAGE" | grep -qi "already uploaded"; then
+            echo "APK file is already uploaded to this version, skipping upload"
+            echo "This is not an error - the APK was uploaded in a previous run"
+          elif [ "$HTTP_CODE" != "200" ] && [ "$HTTP_CODE" != "201" ]; then
             echo "RuStore upload failed with HTTP $HTTP_CODE"
             echo "$BODY" | jq '.' || echo "$BODY"
             exit 1
+          elif [ "$CODE" != "OK" ] && [ -n "$CODE" ]; then
+            # Проверяем, не является ли это ошибкой "already uploaded"
+            if echo "$MESSAGE" | grep -qi "already uploaded"; then
+              echo "APK file is already uploaded to this version, skipping upload"
+              echo "This is not an error - the APK was uploaded in a previous run"
+            else
+              echo "RuStore upload failed, code=$CODE"
+              echo "$BODY" | jq '.' || echo "$BODY"
+              exit 1
+            fi
+          else
+            echo "RuStore APK uploaded successfully"
           fi
-          
-          CODE=$(echo "$BODY" | jq -r '.code // empty')
-          if [ "$CODE" != "OK" ] && [ -n "$CODE" ]; then
-            echo "RuStore upload failed, code=$CODE"
-            echo "$BODY" | jq '.' || echo "$BODY"
-            exit 1
-          fi
-          
-          echo "RuStore APK uploaded successfully"
 
       - name: Commit RuStore version (send to moderation)
         env:
