feat: Improve user experience on TV and enhance usability
This commit introduces several improvements focused on enhancing the user experience, particularly for Android TV users, and refining UI interactions across the app.

### TV-Friendly Link Sharing
To address the difficulty of opening web links on TV devices, a new dialog has been implemented.
- **QR Code Generation:** When users on a TV tap the "Help" or "Support" links, the app now displays a dialog containing a QR code and the full URL. This allows users to easily scan the code with their phone to open the link in a mobile browser.
- **Robust Link Handling:** On non-TV devices, the app first attempts to open links in a browser. If no browser is available, it falls back to displaying the same QR code dialog, ensuring all users can access the content.

### UI and Usability Enhancements
- **Improved Keyboard Handling:** The on-screen keyboard is now automatically hidden when a user finishes editing a text field in the LED Layout and Settings screens (e.g., by pressing "Done" or "Next"), streamlining the configuration process.
- **Settings Dialog State:** Fixed a bug in text input dialogs within the settings screen where changes were not correctly discarded when the user canceled the dialog. The state is now properly reset.

### Bug Fixes
- **Screen Capture Stability:** A race condition in the `ScreenEncoder` has been fixed. The code now ensures the capture thread's looper is fully initialized before creating a handler for it, preventing potential `null` reference exceptions when starting or resuming screen capture.

### Dependency Updates
- **Libraries:** Updated several dependencies, including Firebase Crashlytics and Performance plugins, Compose BOM, and other AndroidX libraries to their latest versions for improved stability and performance.
- **ZXing:** Added the `zxing-core` library to support QR code generation.
- **App Version:** The application version has been incremented to `1.0.2`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,8 @@
 agp = "8.13.2"
 appUpdateKtx = "2.1.0"
 firebaseBom = "34.8.0"
-firebaseCrashlyticsPlugin = "3.0.2"
-firebasePerfPlugin = "1.4.2"
+firebaseCrashlyticsPlugin = "3.0.6"
+firebasePerfPlugin = "2.0.2"
 kotlin = "2.3.0"
 coreKtx = "1.17.0"
 appcompat = "1.7.1"
@@ -14,13 +14,14 @@ flatbuffers = "25.2.10"
 usbSerial = "3.7.0"
 leanback = "1.2.0"
 konfetti = "2.0.5"
-composeBom = "2024.01.00"
+composeBom = "2026.01.01"
 materialIconsExtended = "1.7.8"
 tvFoundation = "1.0.0-alpha12"
 tvMaterial = "1.0.1"
-activityCompose = "1.12.2"
-lifecycleViewModelCompose = "2.7.0"
-navigationCompose = "2.9.6"
+activityCompose = "1.12.3"
+lifecycleViewModelCompose = "2.10.0"
+navigationCompose = "2.9.7"
+zxing = "3.5.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -51,6 +52,7 @@ androidx-tv-material = { group = "androidx.tv", name = "tv-material", version.re
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewModelCompose" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+zxing-core = { group = "com.google.zxing", name = "core", version.ref = "zxing" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
