feat: Add in-app review prompt
This commit introduces an in-app review prompt to encourage users to rate the application on the Google Play Store. The prompt is designed to be non-intrusive and respects Google's API quotas.

A new `ReviewHelper` class has been added to manage the logic for when to show the review dialog. The request is triggered after a user has successfully started the ambient lighting.

The conditions for showing the prompt are:
- The lighting must be started at least 5 times.
- At least 3 days must have passed since the last review request was made.

The implementation uses the official Google Play In-App Review API.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.13.2"
 appUpdateKtx = "2.1.0"
+playReview = "2.0.2"
 firebaseBom = "34.8.0"
 firebaseCrashlyticsPlugin = "3.0.6"
 firebasePerfPlugin = "2.0.2"
@@ -31,6 +32,8 @@ androidx-preference-ktx = { group = "androidx.preference", name = "preference-kt
 androidx-localbroadcastmanager = { group = "androidx.localbroadcastmanager", name = "localbroadcastmanager", version.ref = "localbroadcastmanager" }
 app-update = { module = "com.google.android.play:app-update", version.ref = "appUpdateKtx" }
 app-update-ktx = { module = "com.google.android.play:app-update-ktx", version.ref = "appUpdateKtx" }
+play-review = { module = "com.google.android.play:review", version.ref = "playReview" }
+play-review-ktx = { module = "com.google.android.play:review-ktx", version.ref = "playReview" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 firebase-perf = { module = "com.google.firebase:firebase-perf" }
