feat: Add Camera Capture mode with perspective correction
This commit introduces a major new feature: the ability to use the device's camera as a capture source instead of the screen. This allows the application to generate ambient lighting for any video source (e.g., a non-smart TV, game console) by pointing the camera at the screen.

The implementation includes a new camera capture engine with perspective correction and a dedicated UI for setting up the capture area.

### Camera Capture Engine (`CameraEncoder`)
- A new `CameraEncoder.kt` class has been added, which is responsible for capturing frames from the camera using `CameraX`.
- It performs perspective correction by mapping a user-defined quadrilateral (4 corners) from the camera view onto a rectangular output buffer. This corrects for the camera not being perfectly aligned with the TV screen.
- The engine handles image rotation, conversion from RGBA to RGB, and integrates with the existing color processing and network sending pipeline (`HyperionThread`).
- The `ScreenGrabberService` has been updated to manage the lifecycle of `CameraEncoder` alongside the existing `ScreenEncoder`. It now handles new actions (`ACTION_START_CAMERA`) and required permissions (`FOREGROUND_SERVICE_TYPE_CAMERA`).

### Camera Setup UI
- A new settings screen, `CameraSetupScreen.kt`, allows the user to configure the capture area.
- It displays a live camera preview and an interactive overlay with four draggable corners. Users can drag these corners to align them with the corners of their physical TV screen.
- The UI includes options to reset the corners to a default position and save the configuration.
- The main screen now shows a live camera preview with the defined corner overlay when camera mode is active, providing visual feedback without needing to be in the setup screen.

### Settings and Integration
- A new "Capture Source" preference has been added to the settings, allowing users to switch between "Screen" and "Camera" mod

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA" />
     <uses-feature android:name="android.hardware.usb.host" android:required="false" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
 
     <uses-feature
         android:name="android.hardware.touchscreen"
@@ -47,10 +51,11 @@
         <service
             android:name="com.vasmarfas.UniversalAmbientLight.common.ScreenGrabberService"
             android:exported="true"
-            android:foregroundServiceType="mediaProjection">
+            android:foregroundServiceType="mediaProjection|camera">
             <intent-filter>
                 <action android:name="com.vasmarfas.UniversalAmbientLight.common.ScreenGrabberService" />
                 <action android:name="com.vasmarfas.UniversalAmbientLight.service.ACTION_START" />
+                <action android:name="com.vasmarfas.UniversalAmbientLight.service.ACTION_START_CAMERA" />
                 <action android:name="com.vasmarfas.UniversalAmbientLight.service.ACTION_STOP" />
                 <action android:name="com.vasmarfas.UniversalAmbientLight.service.ACTION_STATUS" />
                 <action android:name="com.vasmarfas.UniversalAmbientLight.service.ACTION_EXIT" />
